Should fix #28 as my custom query implementation is too far behind the latest changes

--- a/assets/stylesheets/trackers_progress.css
+++ b/assets/stylesheets/trackers_progress.css
@@ -10,14 +10,14 @@ h2.project {
 	margin-top: 1em;
 }
 table.tracker tr td {
-	white-space: nowrap; 
+	white-space: nowrap;
 	text-align: right;
 	overflow: visible;
 	/* application.css is setting this to 10px */
 	padding-right: 0px;
 }
 table.tracker tr td div {
-	position: absolute;
+	position: relative;
 	text-align: left;
 	left: 1.5em;
 }
